Fix bottom border spacing on main page.

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -195,7 +195,6 @@
   font-size: 1.25rem;
 
   @include breakpoint($small) {
-    margin-bottom: 0;
     @include gallery(4 of 12);
 
     .feature__item-teaser {
